test/parse/expr/bad-setlocal-no-value.txt
;;; ERROR: 1
(module (func
  (local i32)
  (set_local 0)))
(;; STDERR ;;;
parse/expr/bad-setlocal-no-value.txt:4:15: syntax error, unexpected )
  (set_local 0)))
              ^
;;; STDERR ;;)
